# universal-anki-creator

./: .gitignore  INPUT.txt  INPUT.txt.example  PROMPT.md  PROMPT.md.example  README.md  SPEC.md  pyproject.toml  run.sh
src/: __init__.py  api.py  formatter.py  main.py  parser.py  prompt.py  validator.py
templates/: INSTRUCTION.md
